<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@color/colorToolbarBackground" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/select_city"
            android:textColor="@color/btn_press_color"
            android:textSize="18sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/sh"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@id/title"
        android:layout_margin="10dip"
        android:background="@drawable/search_edittext_shape"
        android:drawableLeft="@drawable/wb_search_icon"
        android:drawablePadding="5dp"
        android:hint="@string/input_city_name_or_pingyin"
        android:padding="10dip"
        android:textColor="#515151"
        android:textSize="16dp" >
    </EditText>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sh"
        android:layout_marginTop="7dp"
        android:cacheColorHint="#00000000"
        android:divider="#00000000"
        android:dividerHeight="0dp"
        android:listSelector="@android:color/transparent"
        android:scrollbars="none" />

    <ListView
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sh"
        android:layout_marginTop="7dp"
        android:cacheColorHint="#00000000"
        android:divider="#00000000"
        android:dividerHeight="0dp"
        android:listSelector="@android:color/transparent"
        android:scrollbars="none"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_noresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sh"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sorry_no_search_city"
        android:textColor="#000000"
        android:textSize="16sp"
        android:visibility="gone" />

    <com.traffic.locationremind.pinying.MyLetterListView
        android:id="@+id/MyLetterListView01"
        android:layout_width="25dip"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@id/sh"
        android:layout_marginRight="2dp"
        android:layout_marginTop="7dp" />

</RelativeLayout>