<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                tools:context="com.traffic.locationremind.baidu.location.activity.MainActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:popupTheme="@style/AppTheme">


        <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="@dimen/bick_btn_width"
                android:layout_height="@dimen/bick_btn_width"
                android:background="@drawable/button_back_select"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
        />
        <TextView
                android:id="@+id/change_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginLeft="50dp"
                android:textColor="#6A5ACD"
                android:gravity="center"
                android:textStyle="normal"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/bar"
            android:layout_marginBottom="@dimen/search_height"
            android:background="@color/white"
            android:orientation="vertical">
        <View android:layout_width="match_parent"
              android:layout_height="1px"
              android:background="#104E8B"
        />

        <LinearLayout
                android:layout_margin="1dp"
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/remind_line_map_padding_left"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/start_green_route"
                        android:text="@string/start_station"
                        android:textColor="#EE7621"
                        android:textStyle="normal"
                        android:textSize="16sp"
                />
                <TextView android:id="@+id/start"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="#6495ED"
                          android:textStyle="normal"
                          android:textSize="14sp"
                />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/end_red_route"
                        android:text="@string/end_station"
                        android:textColor="#EE7621"
                        android:textSize="16sp"
                        android:textStyle="normal"
                />
                <TextView android:id="@+id/end"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="#6495ED"
                          android:textSize="14sp"
                          android:textStyle="normal"
                />
            </LinearLayout>

        </LinearLayout>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <com.traffic.locationremind.baidu.location.view.SelectlineMap
                        android:layout_margin="5dp"
                        android:id="@+id/item_tv_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"/>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <LinearLayout
            android:layout_margin="1dp"
            android:background="@color/white"
            android:layout_alignParentBottom="true"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/collection_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/search_height"
                android:layout_weight="1"
                android:drawableTop="@drawable/locationbar_fav_btn"
                android:text="@string/collection_line"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/blue"
        />
        <TextView
                android:id="@+id/set_remind_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/search_height"
                android:layout_weight="1"
                android:drawableTop="@drawable/set_remind"
                android:text="@string/set_remind"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/blue"
        />
    </LinearLayout>
</RelativeLayout>
